--- a/02-pod.yaml
+++ b/02-pod.yaml
@@ -2,8 +2,9 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: nginx
+  namespace: expense
 spec:
   containers:
   - name: nginx
     image: nginx
-    Namespace: expense
+   
