--- a/12-nodeport.yaml
+++ b/12-nodeport.yaml
@@ -1,29 +1,33 @@
-apiVersion: v1
 kind: Service
+apiVersion: v1
 metadata:
-  name: nodeportservice
+  name: nginx-np
 spec:
   type: NodePort
-  selector:
-    name: expense
-    demo: node
+  selector: # labels are used as selectors
+    project: expense
+    component: backend
+    environment: dev
+    version: "1.0.0"
+    demo: np
   ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 80
-      nodePort: 30007
-
+  - protocol: TCP
+    port: 80 # service port
+    targetPort: 80
+    nodePort: 30007
 ---
-apiVersion: v1
 kind: Pod
+apiVersion: v1
 metadata:
-  name: nodenginx 
+  name: backend-np
   labels:
-    name: expense
-    demo: node
+    project: expense
+    component: backend
+    environment: dev
+    version: "1.0.0"
+    demo: np
 spec:
   containers:
   - name: nginx
     image: nginx
-
-
+    
