--- a/vloume/02-claim-pvc.yaml
+++ b/vloume/02-claim-pvc.yaml
@@ -16,7 +16,9 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: app
-spec:
+spec: 
+  nodeSelector:
+   topology.kubernetes.io/zone: us-east-1a
   containers:
   - name: nginx
     image: nginx
