--- a/vloume/02-claim-pvc.yaml
+++ b/vloume/02-claim-pvc.yaml
@@ -12,10 +12,27 @@ spec:
       storage: 20Gi
 ---
 
+kind: Service
+apiVersion: v1
+metadata:
+  name: nginx-lp
+spec:
+  type: LoadBalancer
+  selector: # labels are used as selectors
+    project: expense
+  ports:
+  - protocol: TCP
+    port: 80 # service port
+    targetPort: 80
+    nodePort: 30007
+
+
 apiVersion: v1
 kind: Pod
 metadata:
   name: app
+  labels:
+    project: expense
 spec: 
   nodeSelector:
    topology.kubernetes.io/zone: us-east-1a
