--- a/16-statefulset.yaml
+++ b/16-statefulset.yaml
@@ -20,6 +20,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: nginx
+  namespace: expense
 spec:
   selector:
     matchLabels:
@@ -45,6 +46,7 @@ spec:
   volumeClaimTemplates:
   - metadata:
       name: www
+      namespace: expense
     spec:
       accessModes: [ "ReadWriteOnce" ]
       storageClassName: "ebs-sc"
